--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="boxbox">
 
         <div class="box">
-            <a href="https://sm1rkk.github.io/female/" target="_self">
+            <a href="https://sm1rkk.github.io/female/">
                 <img src="./PIC/female.png" alt="">
                 <!-- <div class="p1">
                     <a href="#" target="_self">
@@ -44,7 +44,7 @@
 
 
         <div class="box2">
-            <a href="https://sm1rkk.github.io/male/" target="_self">
+            <a href="https://sm1rkk.github.io/male/">
                 <img src="./PIC/male.png" alt="">
                 <!-- <div class="p1">
                     <a href="#" target="_self">
